# SceneTeller

./: LICENSE  README.md  preprocess_data.py  requirements.txt
BlenderProc/blenderproc/python/loader/: Front3DLoader.py
BlenderProc/blenderproc/python/renderer/: SegMapRendererUtility.py
BlenderProc/blenderproc/python/writer/: WriterUtility.py
BlenderProc/examples/datasets/front_3d/: front_3d_utils.py  main_shell_fromLLM.py
LayoutGPT/: run_layoutgpt_3d_generateprompt.py
LayoutGen/: run_layoutgen_3d.py  run_layoutgen_3d_generateprompt.py
LayoutGen/ATISS/config/: bedrooms_eval_config.yaml  living_rooms_eval_config.yaml
LayoutGen/ATISS/scene_synthesis/: utils.py
LayoutGen/ATISS/scene_synthesis/datasets/: threed_front_scene.py  threed_future_dataset.py
LayoutGen/ATISS/scripts/: assemble_scenes.py  render_from_files.py  utils.py
LayoutGen/dataset/splits-preprocessed/: bedroom_splits.json  bedroom_splits_preprompts.json  livingroom_splits.json  livingroom_splits_preprompts.json
instruct-gs2gs/: LICENSE  README.md  pyproject.toml
instruct-gs2gs/igs2gs/: igs2gs.py  igs2gs_config.py  igs2gs_datamanager.py  igs2gs_pipeline.py  igs2gs_trainer.py  ip2p.py
nerfstudio/: pyproject.toml
nerfstudio/nerfstudio/configs/: experiment_config.py
nerfstudio/nerfstudio/engine/: trainer.py
nerfstudio/nerfstudio/models/: splatfacto.py  splatfacto_weird.py
